[gd_scene load_steps=5 format=3 uid="uid://dhf74egj0b4jv"]

[ext_resource type="Script" uid="uid://bt424k7nox0n3" path="res://scripts/minigames/minigame_base.gd" id="1_hwv1k"]
[ext_resource type="AudioStream" uid="uid://b75fekj2xrwpa" path="res://sfx/LevelUp1.wav" id="2_eelwh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_redteam"]
bg_color = Color(1, 0.2, 0.2, 0.2)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.2, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_blueteam"]
bg_color = Color(0.2, 0.4, 1, 0.2)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.4, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MinigameBase" type="Node2D"]
script = ExtResource("1_hwv1k")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimerContainer" type="PanelContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="TimeLabel" type="Label" parent="UI/TimerContainer"]
layout_mode = 2
text = "60"
horizontal_alignment = 1

[node name="IntroContainer" type="PanelContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/IntroContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="UI/IntroContainer/VBoxContainer"]
layout_mode = 2
text = "Minigame Title"
horizontal_alignment = 1

[node name="CountdownLabel" type="Label" parent="UI/IntroContainer/VBoxContainer"]
layout_mode = 2
text = "3"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="UI/IntroContainer/VBoxContainer"]
layout_mode = 2
text = "Description of the minigame goes here"
horizontal_alignment = 1

[node name="ResultsContainer" type="PanelContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ResultsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="UI/ResultsContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Results"
horizontal_alignment = 1

[node name="TeamResultsContainer" type="HBoxContainer" parent="UI/ResultsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="RedTeamPanel" type="PanelContainer" parent="UI/ResultsContainer/VBoxContainer/TeamResultsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_redteam")

[node name="RedTeamLabel" type="Label" parent="UI/ResultsContainer/VBoxContainer/TeamResultsContainer/RedTeamPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 28
text = "RED TEAM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlueTeamPanel" type="PanelContainer" parent="UI/ResultsContainer/VBoxContainer/TeamResultsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_blueteam")

[node name="BlueTeamLabel" type="Label" parent="UI/ResultsContainer/VBoxContainer/TeamResultsContainer/BlueTeamPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.4, 1, 1)
theme_override_font_sizes/font_size = 28
text = "BLUE TEAM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultsList" type="VBoxContainer" parent="UI/ResultsContainer/VBoxContainer"]
layout_mode = 2

[node name="EndMinigameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_eelwh")
bus = &"SFX"
